# artigo3

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: compare.yaml  config.yaml
configs/data/: cifar_bags.yaml  colon_cancer.yaml  elephant.yaml  fashion_mnist_bags.yaml  fox.yaml  mnist_bags.yaml  musk1.yaml  musk2.yaml  tiger.yaml  ucsb_breast.yaml
configs/model/: attention.yaml  hopfield.yaml  max.yaml  mean.yaml
docs/: METHODOLOGY.md  NEXT_STEPS.md  ROADMAP.md
experiments/: README.md
kaggle/: README.md  run.ipynb
notebooks/: 01_explore_and_forward.ipynb  02_explore_tiger_elephant.ipynb  03_explore_cifar_bags.ipynb
src/hopmil/: __init__.py
src/hopmil/data/: __init__.py  cifar_bags.py  classic.py  colon_cancer.py  datamodule.py  fashion_mnist_bags.py  mil_dataset.py  mnist_bags.py  synthetic.py  ucsb_breast.py
src/hopmil/eval/: compare.py  metrics.py  stats.py
src/hopmil/models/: __init__.py  aggregators.py  encoders.py  mil_model.py
src/hopmil/training/: factory.py  lightning_module.py  train.py
src/hopmil/utils/: seed.py
tests/: test_aggregators.py  test_data.py  test_datamodule.py  test_histopath.py  test_metrics.py  test_stats.py  test_synthetic.py
