[project]
name = "hopmil"
version = "0.1.0"
description = "Modern Hopfield layers as an attention-replacement for instance aggregation in Multiple Instance Learning"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Felipe Waks", email = "felipe.waks@guidance.dev" }]
dependencies = [
    "torch>=2.2",
    "lightning>=2.2",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.16",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "pandas>=2.1",
    "torchvision>=0.17",
    "torchmetrics>=1.3",
    "baycomp>=1.0.2",
    "joblib>=1.3",
]

[project.optional-dependencies]
# Heavy git dependency — only needed for the Hopfield aggregator.
# Install with: uv sync --extra hopfield
hopfield = [
    "hopfield-layers @ git+https://github.com/ml-jku/hopfield-layers.git",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "matplotlib>=3.8",
]

[project.scripts]
hopmil-train = "hopmil.training.train:main"
hopmil-compare = "hopmil.eval.compare:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# allow the `hopfield-layers @ git+...` direct reference in the hopfield extra
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hopmil"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: tests that import the heavy hflayers dependency",
]
